--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,33 +1,34 @@
 version: "3"
 services:
   db_postgres:
-    build: ./postgres
+    build: postgres
     environment: 
-      USER_PASSWORD: admin
-      POSTGRES_PASSWORD: admin
+      POSTGRES_PASSWORD: postgres
     restart: unless-stopped
+    expose:
+      - 5432
 
-  # APP*****************************************
+  # # APP*****************************************
   ticket-log:
-    build: ./ticker-log
+    
+    build: .\ticket-log
     depends_on:
       - db_postgres
     links:
       - db_postgres
-    volumes: 
-      - ${DIRECTORY_PATH}:/usr/app
+    expose:
+      - 8400
+    ports:
+      - 8400:8400
 
   ticket-log-view:
-    build: ./ticket-log-view
+    build: ticket-log-view
     expose:
       - 4200
     ports:
-      -4200:4200
+      - 4200:4200
     restart: unless-stopped
-    depends_on:
-      - db_postgres
-    links:
-      - db_postgres
+  
       
 volumes:
   postgres-data:
