Correção no docker-compose.yml

--- a/ticket-log-view/Dockerfile
+++ b/ticket-log-view/Dockerfile
@@ -1,12 +1,17 @@
-FROM node:12.7-alpine AS build
-RUN mkdir -p  /app
-WORKDIR /app
+FROM node:12.16.1-alpine As builder
+
+WORKDIR /usr/src/app
+
 COPY package.json package-lock.json ./
+
 RUN npm install
-COPY . /app
+
+COPY . .
+
 RUN npm run build --prod
 
-FROM nginx:1.19.5-alpine
-COPY --from=build app/dist/ticker-log-front /usr/share/nginx/html
+FROM nginx:1.15.8-alpine
+
+COPY --from=builder /usr/src/app/dist/ticker-log-front/  /usr/share/nginx/html
 
 EXPOSE 4200
