--- a/ticket-log/Dockerfile
+++ b/ticket-log/Dockerfile
@@ -3,7 +3,7 @@ LABEL maintainer =  'Jefster Farlei'
 
 WORKDIR /ticker-log
 COPY target/ticket-log-1.0.0.jar .
-COPY assets .
+COPY assets ./assets
 EXPOSE 8400
 
 ENTRYPOINT ["java", "-jar", "ticket-log-1.0.0.jar"]
