--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,14 @@
 version: "3"
 services:
   db_postgres:
-    build: postgres
+    build: .\postgres
     environment: 
+      POSTGRES_DB: dbc
       POSTGRES_PASSWORD: postgres
+      POSTGRES_USER: postgres
     restart: unless-stopped
+    ports:
+      - 5432:5432
     expose:
       - 5432
 
