Correção no properties

--- a/ticket-log/src/main/resources/application.properties
+++ b/ticket-log/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-server.port=8500
+server.port=8400
 server.servlet.context-path=/ticket-log
 spring.datasource.platform=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/dbc
+spring.datasource.url=jdbc:postgresql://db_postgres:5432/dbc
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.show-sql=true
